fix Project EXT Issue